matrix/element/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: matrix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - chat.prayujt.com
    secretName: chat-prayujt-certs
  rules:
  - host: chat.prayujt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: element
            port:
              number: 80
